[build-system]
requires = ["setuptools >= 60.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "jplephem"
authors = [
    {name = "Brandon Rhodes", email = "brandon@rhodesmill.org"},
]
requires-python = ">=2.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/brandon-rhodes/python-jplephem"

[tool.setuptools]
packages = ["jplephem"]

[tool.setuptools.dynamic]
version = {attr = "jplephem.__version__"}
